// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`TokenName snapshot w/o token name 1`] = `
<form
  className="pf-v6-c-form"
  noValidate={true}
>
  <div
    className="pf-v6-c-form__group"
    helperText="Alphanumeric characters, "-" or ".", starting and ending with an alphanumeric character."
  >
    <div
      className="pf-v6-c-form__group-label"
    >
      <label
        className="pf-v6-c-form__label"
        htmlFor="token-name-label"
      >
        <span
          className="pf-v6-c-form__label-text"
        >
          Token Name
        </span>
        <span
          aria-hidden="true"
          className="pf-v6-c-form__label-required"
        >
           
          *
        </span>
      </label>
        
    </div>
    <div
      className="pf-v6-c-form__group-control"
    >
      <span
        className="pf-v6-c-form-control"
      >
        <input
          aria-describedby="token-name-label"
          aria-invalid={false}
          aria-label="Token Name"
          data-ouia-component-id="OUIA-Generated-TextInputBase-1"
          data-ouia-component-type="PF6/TextInput"
          data-ouia-safe={true}
          disabled={false}
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          placeholder="Enter a Token Name"
          required={true}
          type="text"
          value=""
        />
      </span>
    </div>
  </div>
</form>
`;

exports[`TokenName snapshot with token name 1`] = `
<form
  className="pf-v6-c-form"
  noValidate={true}
>
  <div
    className="pf-v6-c-form__group"
  >
    <div
      className="pf-v6-c-form__group-label"
    >
      <label
        className="pf-v6-c-form__label"
        htmlFor="token-name-label"
      >
        <span
          className="pf-v6-c-form__label-text"
        >
          Token Name
        </span>
        <span
          aria-hidden="true"
          className="pf-v6-c-form__label-required"
        >
           
          *
        </span>
      </label>
        
    </div>
    <div
      className="pf-v6-c-form__group-control"
    >
      <span
        className="pf-v6-c-form-control"
      >
        <input
          aria-describedby="token-name-label"
          aria-invalid={false}
          aria-label="Token Name"
          data-ouia-component-id="OUIA-Generated-TextInputBase-2"
          data-ouia-component-type="PF6/TextInput"
          data-ouia-safe={true}
          disabled={false}
          isReadOnly={true}
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          placeholder="Enter a Token Name"
          required={true}
          type="text"
          value="github-token"
        />
      </span>
    </div>
  </div>
</form>
`;
